[package]
name = "actix_async"
version = "0.1.0"
authors = [" <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lib"
# path = "src/lib.rs"


[dependencies]

actix-web = "2.0.0"
actix-rt = "1.0.0"
tokio = "0.2.6"
