[package]
name = "actix_async"
version = "0.1.0"
authors = [" <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# name = "lib"
# path = "src/lib.rs"


[dependencies]

actix-web = { version = "2.0.0", default-features= false }
actix-rt ={ version =  "1.0.0", default-features= false }
tokio ={ version =  "0.2.6", default-features= false }
