[package]
name = "tokioasync"
version = "0.1.0"
authors = [" <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tokioserver"
path = "src/server.rs"

[[bin]]
name = "tokioclient"
path = "src/client.rs"

[[example]]
name = "solution2"
path = "src/solution2.rs"


[dependencies]
# Loggings
env_logger = "0.7.1"
log = "0.4.8"
# Command line application
clap = "2.33.0"
ctrlc = "3.1.3"

# TCP networking
tokio = { version = "0.2.4", features = ["full"] }
